@startuml server-config
title Server — Config & Entrypoint (org.adsl.server.config, ServerApp)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "server" {
  class ServerApp <<utility>> {
    -ServerApp()
    {static} ~main(args: String[]): void
    {static} -startServer(socketPort: int, rmiPort: int, recoverDirectory: String): void
    {static} -printUsageAndExit(errorMessage: String): void
  }
  note right of ServerApp
    args: <socket-port> <rmi-port> <recover-directory>.
    Bootstrap: init DB (fall back to NoGameDAO),
    SocketServer + RMI registry, JsonBoardConfigLoader,
    SerialGamePersistenceManager, Home, ServerController,
    recoverGames, timeoutChecker(5000ms, 20000ms),
    shutdown hook → serverController.shutdown().
  end note
}

package "server.config" {

  interface BoardConfigLoader {
    +getCards(numPlayers: int): ArrayList<Set<Card>>
    +getOfferTrack(numPlayers: int): OfferTrack
    +getOrderTile(numPlayers: int): OrderTile
    +getBuildings(): Set<Building>
    +getSettings(numPlayers: int): GameSettings
  }

  class GameSettings <<record>> {
    +numLowTribeCard: int
    +numTopTribeCard: int
    +numBuildingEra1: int
    +numBuildingEra2: int
    +numBuildingEra3: int
  }

  class JsonBoardConfigLoader {
    {static} -CARD_PARSERS: Map<String, CardParser>
    {static} -BUILDING_PARSERS: Map<String, BuildingParser>
    -mapper: ObjectMapper
    +getCards(numPlayers: int): ArrayList<Set<Card>>
    -loadCardsFromFile(filename: String, arrayKey: String, np: int, result: ArrayList<Set<Card>>): void
    +getOfferTrack(numPlayers: int): OfferTrack
    +getOrderTile(numPlayers: int): OrderTile
    +getBuildings(): Set<Building>
    +getSettings(numPlayers: int): GameSettings
  }

  interface CardParser <<@FunctionalInterface>> {
    +parse(node: JsonNode, era: int, numPlayers: Integer): Card
  }

  interface BuildingParser <<@FunctionalInterface>> {
    +parse(node: JsonNode, era: int): Building
  }
}

JsonBoardConfigLoader ..|> BoardConfigLoader
JsonBoardConfigLoader +-- CardParser
JsonBoardConfigLoader +-- BuildingParser

JsonBoardConfigLoader ..> "server.model.cards.Card"
JsonBoardConfigLoader ..> "server.model.cards.buildings.Building"
JsonBoardConfigLoader ..> "server.model.board.OfferTrack"
JsonBoardConfigLoader ..> "server.model.board.OrderTile"

ServerApp ..> "server.controller.ServerController"
ServerApp ..> JsonBoardConfigLoader
ServerApp ..> "server.persistence.SerialGamePersistenceManager"
ServerApp ..> "server.persistence.SqlGameDAO"
ServerApp ..> "server.persistence.NoGameDAO"
ServerApp ..> "server.db.DatabaseManager"
ServerApp ..> "server.network.socket.SocketServer"
ServerApp ..> "server.network.rmi.RemoteServerServiceImpl"
ServerApp ..> "server.model.Home"

note bottom of JsonBoardConfigLoader
  Reads classpath resources:
   /cards/cards_<N>p.json
   /cards/buildings.json
   /offer_tiles.json
   /order_tiles.json
   /game_settings.json
  Cards/buildings instantiated via the static
  parser maps keyed on JSON "type" field.
end note

@enduml
